--- a/style.css
+++ b/style.css
@@ -4,17 +4,17 @@
     padding: 0;
 }
 
-.first{
+.main{
 
     width: 100%;
-    height: 100vh;
+    height: 200vh;
     /* background-color: red; */
 }
 
 .nav{
 
     width: 100%;
-    height: 15vh;
+    height: 20vh;
     /* background-color: blue; */
     display: flex;
 
@@ -117,4 +117,55 @@ font-family:sans-serif;
     background-color: rgb(47, 2, 2);
     color: white;
     font-weight: bolder;
+}
+
+
+/* first */
+
+.hero_section{
+
+    width: 100%;
+    height: 150vh;
+    /* background-color: red; */
+    display: flex;
+}
+
+.first_section{
+
+    width: 50%;
+    height: 100vh;
+    /* background-color: green; */
+}
+
+.firstone{
+
+    width: 70%;
+    height: 25vh;
+    /* background-color: blue; */
+    margin-left: 50px;
+}
+
+
+.firstone h1{
+
+    font-size: 43px;
+    /* background-color: red; */
+    height: 10vh;
+    width: 80%;
+    color: rgb(68, 4, 4);
+    margin-top: 80px;
+}
+
+
+
+
+
+
+
+
+.firstnav{
+
+    width: 50%;
+    height: 100vh;
+    /* background-color: red; */
 }
