--- a/style.css
+++ b/style.css
@@ -135,14 +135,15 @@ font-family:sans-serif;
     width: 50%;
     height: 100vh;
     /* background-color: green; */
+
 }
 
 .firstone{
 
-    width: 70%;
-    height: 25vh;
+    width: 75%;
+    height: 34vh;
     /* background-color: blue; */
-    margin-left: 50px;
+    margin-left: 180px;
 }
 
 
@@ -150,10 +151,49 @@ font-family:sans-serif;
 
     font-size: 43px;
     /* background-color: red; */
-    height: 10vh;
-    width: 80%;
-    color: rgb(68, 4, 4);
+    height: 18vh;
+    width: 100%;
+    color: rgb(64, 1, 1);
     margin-top: 80px;
+    font-weight: bolder;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.firstone h2{
+
+    font-size: 32px;
+    color: rgb(56, 7, 7);
+    text-align: center;
+    font-weight: 100;
+
+}
+
+.first2{
+
+    width: 100%;
+    height: 60vh;
+    /* background-color: red; */
+    display: flex;
+}
+
+.firsttwo img{
+
+    width: 100%;
+    height: 65vh;
+    position: relative;
+    z-index: 2;
+}
+
+.firstthree{
+
+    width: 300px;
+    height: 150px;
+    background-color: rgba(33, 0, 0, 0.947);
+    position: relative;
+    right: 110px;
+    z-index: 1;
+
+    border-radius: 30px;
 }
 
 
@@ -162,10 +202,75 @@ font-family:sans-serif;
 
 
 
-
-.firstnav{
+.second_section{
 
     width: 50%;
     height: 100vh;
     /* background-color: red; */
+    display: flex;
+}
+
+.secondone{
+
+    width: 50%;
+    height: 70vh;
+    /* background-color: blue; */
+}
+.img1
+{
+     border-radius: 40px;
+}
+.img1 img{
+
+    width: 80%;
+    height: 40vh;
+    border-radius: 40px;
+    /* padding-left: 50px; */
+    position: relative; 
+    right: 20px;
+    object-fit: cover;
+    overflow: hidden;
+    
+}
+.img2{
+    margin-top: 20px;
+}
+.img2 img{
+
+    width: 100%;
+    height: 25vh;
+    border-radius: 50px;
+    /* padding-top: 30px; */
+    object-fit: cover;
+   position: relative;
+   right: 150px;
+}
+
+
+.secondtwo{
+
+    width: 50%;
+    height: 70vh;
+    /* background-color: blue; */
+}
+
+
+.img3 img{
+
+     width: 80%;
+    height: 50vh;
+    border-radius: 40px;
+    position: relative;
+    right: 70px;
+}
+
+
+.img4 img{
+
+     width: 80%;
+    height: 16vh;
+    border-radius: 40px;
+    padding-top: 10px;
+    position: relative;
+    right:130px
 }
