--- a/style.css
+++ b/style.css
@@ -144,6 +144,7 @@ font-family:sans-serif;
     height: 34vh;
     /* background-color: blue; */
     margin-left: 180px;
+   
 }
 
 
@@ -151,7 +152,7 @@ font-family:sans-serif;
 
     font-size: 43px;
     /* background-color: red; */
-    height: 18vh;
+    height: 15vh;
     width: 100%;
     color: rgb(64, 1, 1);
     margin-top: 80px;
@@ -171,7 +172,7 @@ font-family:sans-serif;
 .first2{
 
     width: 100%;
-    height: 60vh;
+    height: 55vh;
     /* background-color: red; */
     display: flex;
 }
@@ -182,19 +183,87 @@ font-family:sans-serif;
     height: 65vh;
     position: relative;
     z-index: 2;
+    bottom: 100px;
 }
 
 .firstthree{
 
     width: 300px;
     height: 150px;
-    background-color: rgba(33, 0, 0, 0.947);
+    background-color: rgba(34, 3, 3, 0.947);
     position: relative;
     right: 110px;
     z-index: 1;
+    bottom: 30px;
 
     border-radius: 30px;
 }
+
+.firstthree h1{
+
+    font-size: 27px;
+    color: rgb(237, 233, 233);
+    height: 50px;
+    padding-top: 20px;
+    padding-left: 40px;
+}
+
+.firstthree p{
+
+    font-size: 19px;
+    color: rgb(236, 231, 231);
+    text-align: center;
+    width: 90%;
+    padding-left: 20px;
+}
+
+.first3{
+
+    width: 80%;
+    height: 40vh;
+    /* background-color: red; */
+}
+
+.picture1 .pic1{
+
+    width: 45%;
+    height: 38vh;
+    border-radius: 40px;
+    position: relative;
+    bottom: 170px;
+    left: 160px;
+    opacity: 1;
+   
+
+}
+
+.pic2{
+
+    width: 44%;
+    height: 20vh;
+    border-radius: 30px;
+     position: relative;
+    bottom: 460px;
+    left: 400px;
+     opacity: 1;
+     z-index: 1;
+
+}
+
+.pic3{
+
+    width: 49%;
+    height: 40vh;
+    border-radius: 40px;
+    position: relative;
+    z-index: 1;
+    top: 40px;
+}
+
+
+
+
+
 
 
 
@@ -230,6 +299,7 @@ font-family:sans-serif;
     right: 20px;
     object-fit: cover;
     overflow: hidden;
+    opacity: 0.9;
     
 }
 .img2{
@@ -238,8 +308,8 @@ font-family:sans-serif;
 .img2 img{
 
     width: 100%;
-    height: 25vh;
-    border-radius: 50px;
+    height: 28vh;
+    border-radius: 40px;
     /* padding-top: 30px; */
     object-fit: cover;
    position: relative;
@@ -259,9 +329,11 @@ font-family:sans-serif;
 
      width: 80%;
     height: 50vh;
-    border-radius: 40px;
+    border-radius: 30px;
     position: relative;
     right: 70px;
+    top:40px;
+    
 }
 
 
@@ -270,7 +342,7 @@ font-family:sans-serif;
      width: 80%;
     height: 16vh;
     border-radius: 40px;
-    padding-top: 10px;
+   top: 50px;
     position: relative;
     right:130px
 }
