--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@
 .main{
 
     width: 100%;
-    height: 200vh;
-    /* background-color: red; */
+    height: 180vh;
+    /* background-color: blue; */
 }
 
 .nav{
@@ -125,7 +125,7 @@ font-family:sans-serif;
 .hero_section{
 
     width: 100%;
-    height: 150vh;
+    height: 160vh;
     /* background-color: red; */
     display: flex;
 }
@@ -261,20 +261,10 @@ font-family:sans-serif;
 }
 
 
-
-
-
-
-
-
-
-
-
-
 .second_section{
 
     width: 50%;
-    height: 100vh;
+    height: 130vh;
     /* background-color: red; */
     display: flex;
 }
@@ -284,6 +274,7 @@ font-family:sans-serif;
     width: 50%;
     height: 70vh;
     /* background-color: blue; */
+    
 }
 .img1
 {
@@ -345,4 +336,98 @@ font-family:sans-serif;
    top: 50px;
     position: relative;
     right:130px
+}
+
+.secondthree{
+
+    width: 50%;
+    height: 70vh;
+    /* background-color: blue; */
+    position: relative;
+    left: 48%;
+    bottom: 44%;
+}
+
+.sentence1{
+
+    width: 100%;
+    height: 30%;
+    /* background-color: red; */
+}
+
+.sentence1 h1{
+
+    font-size: 32px;
+    font-weight: bolder;
+    height: 55px;
+    color: rgba(89, 0, 0, 0.923);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.sentence1 p{
+
+   color: rgba(65, 16, 16, 0.789);
+    font-size: 26px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
+}
+
+.sentence2{
+
+    width: 100%;
+    height: 63%;
+    /* background-color: black; */
+    margin-top: 50px;
+}
+
+.word1{
+
+    width: 100%;
+    height: 15vh;
+    /* background-color: green; */
+    display: flex;
+}
+
+.word1 img{
+
+    width: 80px;
+    height: 70px;
+    padding-top: 20px;
+}
+
+.text1 h1{
+
+     font-size: 28px;
+    font-weight: bolder;
+    height: 55px;
+    color: rgba(89, 0, 0, 0.923);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    padding-left: 30px;
+}
+
+
+.text1 p{
+
+     color: rgba(65, 16, 16, 0.789);
+    font-size: 24px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
+    padding-left: 30px;
+}
+
+/* third */
+
+.third_section{
+
+    width: 100%;
+    height: 50vh;
+    /* background-color: blue; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.third1{
+
+    width: 80%;
+    height: 40vh;
+    /* background-color: green; */
 }
