--- a/style.css
+++ b/style.css
@@ -360,7 +360,7 @@ font-family:sans-serif;
     font-size: 32px;
     font-weight: bolder;
     height: 55px;
-    color: rgba(89, 0, 0, 0.923);
+    color: rgba(23, 0, 0, 0.8);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
@@ -399,7 +399,7 @@ font-family:sans-serif;
      font-size: 28px;
     font-weight: bolder;
     height: 55px;
-    color: rgba(89, 0, 0, 0.923);
+    color: rgba(23, 0, 0, 0.8);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     padding-left: 30px;
 }
@@ -418,7 +418,7 @@ font-family:sans-serif;
 .third_section{
 
     width: 100%;
-    height: 70vh;
+    height: 65vh;
     /* background-color: blue; */
     
 }
@@ -557,7 +557,7 @@ font-family:sans-serif;
     font-size: 25px;
     font-weight: bold;
     background-color: white;
-    padding-left: 26px;
+    padding-left: 38px;
     color: rgb(46, 42, 42);
 }
 
@@ -629,3 +629,48 @@ font-family:sans-serif;
     padding-top: 20px;
 }
 
+
+/* fourth section */
+
+.subnav{
+
+    width: 100%;
+    height: 100vh;
+    /* background-color: red; */
+}
+
+.subnav1{
+
+    width: 90%;
+    height: 10vh;
+    /* background-color: blue; */
+    display: flex;
+    justify-content: space-evenly;
+    /* align-items: center; */
+    margin-left: 70px;
+
+}
+
+.para{
+
+    width: 120px;
+    height: 45px;
+    background-color: rgba(15, 0, 0, 0.816);
+    color: white;
+    font-size: 22px;
+    border-radius: 10px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: bold;
+    border: none;
+}
+
+
+.subnav1 .items1{
+
+    font-size: 24px;
+    color: rgba(89, 3, 3, 0.832);
+    font-weight: bolder;
+     font-family: Georgia, 'Times New Roman', Times, serif;
+     padding-top: 10px;
+
+}
