--- a/style.css
+++ b/style.css
@@ -674,3 +674,83 @@ font-family:sans-serif;
      padding-top: 10px;
 
 }
+
+.subnav2{
+
+    width: 90%;
+    height: 40vh;
+    /* background-color: blue; */
+    margin-left: 70px;
+    display: flex;
+    gap: 30px;
+}
+
+.content1{
+
+    width: 18%;
+    height: 40vh;
+    /* background-color: red; */
+   
+}
+
+.content1 img{
+
+    width: 100%;
+    height: 40vh;
+    border-radius: 15px;
+}
+
+.create1{
+
+    width: 100%;
+    height: 90px;
+    background-color: rgba(185, 193, 200, 0.851);
+    position: relative;
+    bottom: 95px;
+}
+
+.create1 h1{
+
+    font-size: 19px;
+    color: white;
+    font-family: arial;
+    padding-left: 20px;
+    padding-top: 10px;
+}
+
+.create1 .star{
+
+    width: 20px;
+    height: 20px;
+    position: relative;
+    left: 150px;
+    top: 20px;
+   
+}
+
+.create1 h2{
+
+    font-size: 19px;
+    color: white;
+    padding-left: 180px;
+    font-family: arial;
+   
+}
+
+.create1 h3{
+
+    font-size: 17px;
+    color: white;
+    font-family: arial;
+    position: relative;
+    bottom: 50px;
+    left: 30px;
+}
+
+.create1 .loc{
+
+    width: 20px;
+    height: 20px;
+    position: relative;
+    bottom: 30px;
+}
