--- a/style.css
+++ b/style.css
@@ -635,7 +635,7 @@ font-family:sans-serif;
 .subnav{
 
     width: 100%;
-    height: 100vh;
+    height: 120vh;
     /* background-color: red; */
 }
 
@@ -702,11 +702,13 @@ font-family:sans-serif;
 
 .create1{
 
-    width: 100%;
+    width: 99%;
     height: 90px;
     background-color: rgba(185, 193, 200, 0.851);
     position: relative;
-    bottom: 95px;
+    bottom: 95px; 
+    margin-left: 1px;
+  
 }
 
 .create1 h1{
@@ -723,17 +725,19 @@ font-family:sans-serif;
     width: 20px;
     height: 20px;
     position: relative;
-    left: 150px;
-    top: 20px;
+    left: 170px;
+    top: 4px;
    
 }
 
 .create1 h2{
 
-    font-size: 19px;
+    font-size: 17px;
     color: white;
-    padding-left: 180px;
     font-family: arial;
+    position: relative;
+    left: 200px;
+    bottom: 20px;
    
 }
 
@@ -752,5 +756,39 @@ font-family:sans-serif;
     width: 20px;
     height: 20px;
     position: relative;
-    bottom: 30px;
+    bottom: 26px;
+    left: 8px;
+}
+
+.subnav3{
+
+
+    width: 90%;
+    height: 40vh;
+    /* background-color: blue; */
+    margin-left: 70px;
+    margin-top: 50px;
+    display: flex;
+    gap: 30px;
+}
+
+.subnav4{
+
+    width: 100%;
+    height: 10vh;
+    /* background-color: red; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.subnav4 .view{
+
+    width: 150px;
+    height: 45px;
+    background-color:rgba(15, 0, 0, 0.816) ;
+    color: white;
+    font-size: 20px;
+    border-radius: 20px;
+    border: none;
 }
