--- a/style.css
+++ b/style.css
@@ -635,7 +635,7 @@ font-family:sans-serif;
 .subnav{
 
     width: 100%;
-    height: 120vh;
+    height: 110vh;
     /* background-color: red; */
 }
 
@@ -791,4 +791,163 @@ font-family:sans-serif;
     font-size: 20px;
     border-radius: 20px;
     border: none;
+}
+
+/* fifth */
+
+.fifth_section{
+
+width: 100%;
+height: 50vh;
+/* background-color: red; */
+display: flex;
+}
+
+.fifth1{
+
+    width: 60%;
+    height: 50vh;
+    /* background-color: blue; */
+}
+
+.seq1{
+
+    width: 100%;
+    height: 15vh;
+    /* background-color: green; */
+}
+
+.seq1 h1{
+
+    width: 410px;
+    height: 50px;
+    font-size: 30px;
+    color: rgba(51, 2, 2, 0.816);
+    font-weight: bolder;
+   font-family: Verdana, Geneva, Tahoma, sans-serif;
+   margin-left: 70px;
+   /* background-color: blue; */
+
+}
+
+.seq1 p{
+
+    width: 520px;
+    height: 70px;
+    font-size: 26px;
+    /* background-color: red; */
+    margin-left: 70px;
+    color: rgba(52, 2, 2, 0.768);
+    font-family: arial;
+    font-style: normal;
+    
+}
+
+.fifth1 .seq2{
+
+    width: 75%;
+    height: 30vh;
+    background-color: white;
+    border: 5px solid rgba(51, 2, 2, 0.816);
+    border-radius: 20px;
+    margin-left: 90px;
+    box-shadow: 2px 1px 2px 5px rgb(190, 186, 186);
+}
+
+.set1{
+
+width: 100%;
+height: 140px;
+/* background-color: red; */
+}
+
+.set1 p{
+
+    font-size: 27px;
+    color: rgba(54, 2, 2, 0.768);
+    width: 90%;
+    padding-left: 40px;
+    padding-top: 30px;
+}
+
+.set2{
+
+    width: 100%;
+height: 130px;
+display: flex;
+/* background-color: red; */
+
+}
+
+.set2 .cartoon{
+
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    border: 2px solid rgb(45, 1, 1);
+    outline: 2px solid black;
+    outline-offset: 4px;
+    margin-left: 30px;
+    margin-top: 15px;
+}
+
+.set2 h1{
+
+    color: rgb(68, 3, 3);
+    font-size: 30px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: bolder;
+    padding-left: 20px;
+    padding-top: 40px;
+}
+
+.rating img{
+
+    width: 30px;
+    height: 30px;
+    position: relative;
+    top: 80px;
+    right: 300px;
+}
+
+.fifth2{
+
+    width: 35%;
+    height: 50vh;
+    /* background-color: red; */
+    display: flex;
+}
+
+.card1{
+
+    width: 50%;
+    height: 50vh;
+    /* background-color: green; */
+}
+
+.card1 img{
+
+    width: 100%;
+    height: 38vh;
+    border-radius: 30px;
+    position: relative;
+    right: 90px;
+    top: 20px;
+}
+
+.card2{
+
+    width: 50%;
+    height: 50vh;
+    /* background-color: green; */
+}
+
+.card2 img{
+
+    width: 100%;
+    height: 38vh;
+    border-radius: 30px;
+    position: relative;
+    right: 80px;
+    top: 100px;
 }
