--- a/style.css
+++ b/style.css
@@ -798,14 +798,14 @@ font-family:sans-serif;
 .fifth_section{
 
 width: 100%;
-height: 50vh;
+height: 60vh;
 /* background-color: red; */
 display: flex;
 }
 
 .fifth1{
 
-    width: 60%;
+    width: 65%;
     height: 50vh;
     /* background-color: blue; */
 }
@@ -950,4 +950,134 @@ display: flex;
     position: relative;
     right: 80px;
     top: 100px;
+}
+
+
+
+
+/* sixth */
+
+.sixth  {
+
+    width: 100%;
+    height: 70vh;
+    background-image: url(./images/360_F_765383892_Ii9f4a3VFvcfCuEqVJRHCVVBeR2Z73Io.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    
+
+}
+
+.sixth1{
+
+    width: 30%;
+    height: 50vh;
+    /* background-color: red; */
+   
+}
+
+.sixthone{
+
+    width: 100%;
+    height: 28vh;
+    /* background-color: blue; */
+}
+
+.sixthone img{
+
+    width: 60px;
+    height: 60px;
+    padding-top: 40px;
+    padding-left: 70px;
+}
+
+.sixthone p{
+
+    font-size: 24px;
+    color: rgb(235, 231, 231);
+    width: 70%;
+    padding-left: 70px;
+}
+
+.sixthtwo{
+
+    width: 100%;
+    height: 20vh;
+    /* background-color: green; */
+}
+
+.sixthtwo h1{
+
+    width: 100%;
+    height: 50px;
+    color: rgb(247, 241, 241);
+    font-size: 30px;
+    font-family: arial;
+    padding-left: 65px;
+}
+
+.sixthtwo .phone{
+
+    width: 30px;
+    height: 30px;
+    padding-left: 70px;
+}
+
+.sixthtwo h3{
+
+    height: 40px;
+    color: rgb(231, 228, 228);
+    font-size: 22px;
+    font-family: arial;
+    font-weight: 300;
+    position: relative;
+    left: 125px;
+    bottom: 30px;
+
+}
+
+.sixthtwo .mail{
+
+    width: 30px;
+    height: 30px;
+    padding-left: 70px;
+    position: relative;
+    bottom: 20px;
+}
+
+.sixthtwo p{
+
+     height: 40px;
+    color: rgb(231, 228, 228);
+    font-size: 22px;
+    font-family: arial;
+    font-weight: 300;
+    position: relative;
+    left: 125px;
+    bottom: 50px;
+}
+
+.sixth2{
+
+    width: 35%;
+    height: 50vh;
+    /* background-color: green; */
+    margin-left: 40px;
+}
+
+.sixth2 img{
+
+    width: 60%;
+    height: 200px;
+    padding-left: 100px;
+    padding-top: 140px;
+}
+
+
+.sixth3{
+
+    width: 20%;
+    height: 50vh;
+    /* background-color: red; */
 }
