--- a/style.css
+++ b/style.css
@@ -1079,15 +1079,15 @@ display: flex;
 
     width: 25%;
     height: 60vh;
-    background-color: red;
-    margin-left: 50px;
+    /* background-color: red; */
+    margin-left: 60px;
 }
 
 .sixth4{
 
     width: 60%;
     height: 120px;
-    background-color: green;
+    /* background-color: green; */
     margin-top: 150px;
 }
 
@@ -1098,7 +1098,38 @@ display: flex;
     font-style: normal;
     font-family: arial;
     font-weight: 100;
-    height: 40px;
+    height: 45px;
   
    
+}
+
+.sixth5{
+
+    width: 100%;
+    height: 100px;
+    /* background-color: blue; */
+    margin-top: 160px;
+}
+
+.sixth5 p{
+
+    color: rgb(243, 237, 237);
+    font-size: 24px;
+    font-family: arial;
+    font-weight: 100;
+    height: 40px;
+}
+
+.sixth6{
+
+    width: 100%;
+    height: 50px;
+    display: flex;
+    gap: 20px;
+}
+
+.sixth5 img{
+
+    width: 40px;
+    height: 40px;
 }
